# LifeEngineExtended

./: .gitignore  CMakeLists.txt  README.md  command  command2.txt  commands  main.cpp  map_profiling.txt  stuff  test.txt  test2
CUDACmake/: CmakeLists.txt
LifeEngineCpp/: BlockTypes.h  ColorContainer.h  EngineControlContainer.h  EngineControllContainer.h  EngineDataContainer.h  Linspace.h  OrganismBlockParameters.h  OrganismEditor.cpp  OrganismEditor.h  ParametersStruct.h  SimulationEngine.cpp  SimulationEngine.h  SimulationEngineSingleThread.cpp  SimulationModes.h  SimulationParameters.h  StatisticsCore.h  StatisticsUI.h  UIWindow.cpp  UIWindow.h  WIndowCoreEvents.cpp  WindowCore.cpp  WindowCore.h  WindowCoreDataSavingStuff.cpp  WindowCoreEvents.cpp  WindowCoreProgramLogic.cpp  WindowCoreSlots.cpp  WindowUI.h  cuda_image_creator.cu  cuda_image_creator.cuh  get_device_count.cpp  get_device_count.cuh  mainwindow.ui  textures.h
LifeEngineCpp/Containers/CPU/: ColorContainer.h  EngineControlContainer.h  EngineDataContainer.h  OrganismBlockParameters.h  SimulationParameters.h
LifeEngineCpp/Containers/CUDA/: CUDAEngineDataContainer.cuh  CUDAEngineDataContainer.h
LifeEngineCpp/GridBlocks/: AtomicGridBlock.h  BaseGridBlock.cpp  BaseGridBlock.h
LifeEngineCpp/MainWindow/: WindowCore.h  WindowCoreDataSavingStuff.cpp  WindowCoreEvents.cpp  WindowCoreProgramLogic.cpp  WindowCoreSlots.cpp  WindowUI.h
LifeEngineCpp/Organism/: Anatomy.cpp  Anatomy.h  Brain.cpp  Brain.h  Organism.cpp  Organism.h  Rotation.cpp  Rotation.h
LifeEngineCpp/Organism/CPU/: Anatomy.cpp  Anatomy.h  Brain.cpp  Brain.h  ObservationStuff.h  Organism.cpp  Organism.h
LifeEngineCpp/Organism/CUDA/: CUDA_Anatomy.cpp  CUDA_Anatomy.cuh  CUDA_Brain.cpp  CUDA_Brain.cu  CUDA_Organism.cpp  CUDA_Organism.h
LifeEngineCpp/Organism/Organism_parts/: OrganismBlock.cpp  OrganismBlock.h
LifeEngineCpp/OrganismEditor/: EditorUI.h  OrganismEditor.cpp  OrganismEditor.h  OrganismEditorSlots.cpp
LifeEngineCpp/Organisms/: Anatomy.cpp  Anatomy.h  Brain.cpp  Organism.cpp  Organism.h  Rotation.h  Species.cpp  Species.h
LifeEngineCpp/PRNGS/: RandomGenerator.h  lehmer64.h
LifeEngineCpp/SimulationEngine/: SimulationEngine.cpp  SimulationEngine.h
LifeEngineCpp/SimulationEngine/SimulationEngineModes/: SimulationEnginePartialMultiThread.cpp  SimulationEnginePartialMultiThread.h  SimulationEngineSingleThread.cpp  SimulationEngineSingleThread.h
LifeEngineCpp/SimulationEngineModes/: SimulationEngineCuda.cuh  SimulationEnginePartialMultiThread.cpp  SimulationEnginePartialMultiThread.h  SimulationEngineSingleThread.cpp  SimulationEngineSingleThread.h
LifeEngineCpp/Statistics/: StatisticsUI.h
LifeEngineCpp/Stuff/: Actions.h  BlockTypes.hpp  CursorMode.h  cuda_image_creator.cu  cuda_image_creator.cuh  pix_pos.h
LifeEngineCpp/UIElemets/: GridLayout2D.cpp  GridLayout2D.h
LifeEngineCpp/UiFiles/: editor.ui  mainwindow.ui  statistics.ui
Source/Benchmark/: BenchmarkSlots.cpp  BenchmarkUI.h  Benchmarks.cpp  Benchmarks.h
Source/Containers/: ColorContainer.h  EngineControlParametersContainer.h  EngineDataContainer.h  OCCLogicContainer.h  OrganismBlockParameters.h  OrganismInfoContainer.h  SimulationParameters.h
Source/Containers/CPU/: ColorContainer.h  EngineControlContainer.h  EngineControlParametersContainer.h  EngineDataContainer.h  OCCLogicContainer.h  OrganismBlockParameters.h  OrganismConstructionCodeParameters.h  OrganismInfoContainer.h  (+2 more)
Source/CustomJsonParser/: json_parser.hpp  write.hpp
Source/Frontend/: base_frontend.h  frontend_interface.h
Source/GridBlocks/: AtomicGridBlock.h  BaseGridBlock.h  SingleThreadGridBlock.h
Source/GridStuff/: BaseGridBlock.h  STGridWorld.h
Source/InfoWindow/: InfoWindow.cpp  InfoWindow.h  InfoWindowUI.h
Source/MainWindow/: MainWindow.cpp  MainWindow.h  MainWindowDataSavingStuff.cpp  MainWindowEvents.cpp  MainWindowProgramLogic.cpp  MainWindowSlots.cpp  WindowCore.h  WindowCoreDataSavingStuff.cpp  WindowCoreEvents.cpp  WindowCoreProgramLogic.cpp  WindowCoreSlots.cpp  WindowUI.h
Source/Organism/: Organism.cpp  Organism.h
Source/OrganismEditor/: EditorUI.h  OrganismEditor.cpp  OrganismEditor.h  OrganismEditorDataSaving.cpp  OrganismEditorSlots.cpp
Source/PRNGS/: RandomGenerator.h  basegen.h  shufflebag.h  splitmix64.h  xorshf96.h
Source/Recorder/: Recorder.cpp  Recorder.h  RecorderSlots.cpp  RecorderWindowUI.h
Source/SimulationEngine/: OrganismsController.cpp  OrganismsController.h  SimulationEngine.cpp  SimulationEngine.h
Source/Statistics/: StatisticsCore.h  StatisticsUI.h
Source/Stuff/: Actions.h  BlockTypes.hpp  ConstMap.h  CursorMode.h  DataSavingFunctions.cpp  DataSavingFunctions.h  IPSSmoother.h  ImageCreation.cpp  ImageCreation.h  Linspace.h  MiscFuncs.cpp  MiscFuncs.h  OrganismData.h  UIMisc.cpp  UIMisc.h  Vector2.h  cuda_image_creator.cu  cuda_image_creator.cuh  get_device_count.cuh  iterate_between_two_points.h  pix_pos.h  textures.h
Source/UiFiles/: ChangeValueEventNodeWidget.ui  ConditionalEventNodeWidget.ui  EventChooser.ui  OCCInstructionWidget.ui  OCCParameters.ui  benchmark.ui  editor.ui  ev_controls.md  info.ui  mainwindow.ui  recorder.ui  statistics.ui  worldevents.ui
Source/WorldEvents/: ChangeValueEventNodeWidget.cpp  ChangeValueEventNodeWidget.h  ChangeValueEventNodeWidgetSlots.cpp  ChangeValueEventNodeWidgetUI.h  ConditionalEventNodeWidget.cpp  ConditionalEventNodeWidget.h  ConditionalEventNodeWidgetSlots.cpp  ConditionalEventNodeWidgetUI.h  EventChooser.cpp  EventChooser.h  EventChooserUI.h  EventNodes.h  ParametersList.cpp  ParametersList.h  SimulationParametersTypes.h  WorldEvents.cpp  WorldEvents.h  WorldEventsController.cpp  WorldEventsController.h  WorldEventsEnums.h  WorldEventsSlots.cpp  WorldEventsUI.h
Source/WorldRecorder/: RecordingReconstructor.cpp  RecordingReconstructor.h  RecordingReconstructorCUDA.cu  RecordingReconstructorCUDA.cuh  WorldRecorder.cpp  WorldRecorder.h
Source/common/: common_concepts.h
SuperSpaceEye/LifeEngineExtended/: README.md
SuperSpaceEye/TheLifeEngineCpp/: README.md
Tests/Organism/: Organism.cpp
(+1229 files in other folders)
